fix gap between pricing items

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -408,7 +408,7 @@ nav a:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 48px;
+  gap: 50px;
 }
 
 .pricing-item {
@@ -503,7 +503,7 @@ nav a:hover {
     width: 414px;
   }
   .w-1200 {
-    width: 368px;
+    width: 374px;
   }
   .pricing-item {
     width: 374px;
